--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -2697,8 +2697,225 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cms_certification_number_(ccn)</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>county_name</th>\n",
+       "      <th>cms_region</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>number_of_instances</th>\n",
+       "      <th>footnote</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8514</th>\n",
+       "      <td>453025</td>\n",
+       "      <td>HOUSTON</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>All other conditions</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8515</th>\n",
+       "      <td>453025</td>\n",
+       "      <td>HOUSTON</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Brain disease or condition (non-traumatic)</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8516</th>\n",
+       "      <td>453025</td>\n",
+       "      <td>HOUSTON</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Brain injury (traumatic)</td>\n",
+       "      <td>56</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8517</th>\n",
+       "      <td>453025</td>\n",
+       "      <td>HOUSTON</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Hip or femur fracture</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8518</th>\n",
+       "      <td>453025</td>\n",
+       "      <td>HOUSTON</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Hip or knee replacement, amputation or other b...</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10561</th>\n",
+       "      <td>67T055</td>\n",
+       "      <td>SAN ANTONIO</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Bexar</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Hip or knee replacement, amputation or other b...</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10562</th>\n",
+       "      <td>67T055</td>\n",
+       "      <td>SAN ANTONIO</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Bexar</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Nervous system disorder (excluding stroke)</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10563</th>\n",
+       "      <td>67T055</td>\n",
+       "      <td>SAN ANTONIO</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Bexar</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Spinal cord disease or condition (non-traumatic)</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10564</th>\n",
+       "      <td>67T055</td>\n",
+       "      <td>SAN ANTONIO</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Bexar</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Spinal cord injury (traumatic)</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10565</th>\n",
+       "      <td>67T055</td>\n",
+       "      <td>SAN ANTONIO</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Bexar</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Stroke</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1251 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      cms_certification_number_(ccn)         city state county_name  \\\n",
+       "8514                          453025      HOUSTON    TX      Harris   \n",
+       "8515                          453025      HOUSTON    TX      Harris   \n",
+       "8516                          453025      HOUSTON    TX      Harris   \n",
+       "8517                          453025      HOUSTON    TX      Harris   \n",
+       "8518                          453025      HOUSTON    TX      Harris   \n",
+       "...                              ...          ...   ...         ...   \n",
+       "10561                         67T055  SAN ANTONIO    TX       Bexar   \n",
+       "10562                         67T055  SAN ANTONIO    TX       Bexar   \n",
+       "10563                         67T055  SAN ANTONIO    TX       Bexar   \n",
+       "10564                         67T055  SAN ANTONIO    TX       Bexar   \n",
+       "10565                         67T055  SAN ANTONIO    TX       Bexar   \n",
+       "\n",
+       "       cms_region                                          condition  \\\n",
+       "8514            6                               All other conditions   \n",
+       "8515            6         Brain disease or condition (non-traumatic)   \n",
+       "8516            6                           Brain injury (traumatic)   \n",
+       "8517            6                              Hip or femur fracture   \n",
+       "8518            6  Hip or knee replacement, amputation or other b...   \n",
+       "...           ...                                                ...   \n",
+       "10561           6  Hip or knee replacement, amputation or other b...   \n",
+       "10562           6         Nervous system disorder (excluding stroke)   \n",
+       "10563           6   Spinal cord disease or condition (non-traumatic)   \n",
+       "10564           6                     Spinal cord injury (traumatic)   \n",
+       "10565           6                                             Stroke   \n",
+       "\n",
+       "       number_of_instances  footnote  \n",
+       "8514                    38       0.0  \n",
+       "8515                    59       0.0  \n",
+       "8516                    56       0.0  \n",
+       "8517                    23       0.0  \n",
+       "8518                    26       0.0  \n",
+       "...                    ...       ...  \n",
+       "10561                   79       0.0  \n",
+       "10562                   37       0.0  \n",
+       "10563                   36       0.0  \n",
+       "10564                   10       1.0  \n",
+       "10565                   52       0.0  \n",
+       "\n",
+       "[1251 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1[(df1.state == 'TX')==True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
